@startuml
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle

interface Command <<interface>> {
    + execute(items: ItemList, ui: Ui): void
}

class EditPriceCommand {
    - input: String
    + EditPriceCommand(input: String)
    + execute(items: ItemList, ui: Ui): void
}

interface Validator <<interface>> {
    + validate(items: ItemList): void
}

class EditPriceCommandValidator {
    - input: String
    + EditPriceCommandValidator(input: String)
    + validate(items: ItemList): void
}

class ItemList {
    + getItem(index: int): Item
    + size(): int
}

class Item {
    + setPrice(price: double): void
}

class Ui {
    + showMessage(message: String): void
}

Command <|.. EditPriceCommand
Validator <|.. EditPriceCommandValidator
EditPriceCommand ..> EditPriceCommandValidator : creates/validates >
EditPriceCommand ..> ItemList : reads >
EditPriceCommand ..> Item : modifies >
EditPriceCommand ..> Ui : <<uses>>

@enduml
